# corems-cli

./: .gitignore  .travis.yaml  .travis.yml  Cargo.toml  Dockerfile  INSTALL_MACx86_64  Run_Container_Env.rs  TODO  cms.code-workspace  corems-cli guide.md  corems.in  corems_input.py  docker-compose.yml  install.sh  install_MacOS.sh  install_macos.sh  install_macos.sh.x.c  main-backup.rs  reset_container_env.rs  temp  test_input.py
archive/: main_b.rs  main_inter.rs  main_non.rs
src/: assign.rs  container_env.rs  copy.rs  copy_a.rs  main.rs  main_c.rs  remote_host_ssh.rs  write_py.rs
src/assign/: cards.rs  find_cards.rs  write_py.rs
src/assign/cards/: common_card.rs  read_calibration_card.rs  read_global_settings_card.rs  read_search_card.rs  read_time_binning_card.rs
src/common/: mod.rs
src/container_env/: Load_Container_Env.rs
src/input/: mod.rs
