[package]
name = "hrms-asgn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "*"
futures-util = "0.3.28"
tokio = {version = "1", features = ["full"]}
futures-core = "0.3.28"
bytes = "1.4.0"
flate2 = "1.0.26"
tar = "0.4.38"
clap = { version = "4.0", features = ["derive"] }
